[package]
name = "dot"
version = "0.3.0"
authors = ["Greg Orzell", "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = "Alternative of dotfile management frameworks"
edition = "2021"

[dependencies]
anyhow = "1.0"
ansi_term = "0.12"
clap = { version = "3.2", features = ["derive", "wrap_help"] }
clap_complete = "3.2"
regex = "1.6"
shellexpand = "2"
thiserror = "1.0"
toml = "0.5"
url = "2.3"
dirs = "4.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
advapi32-sys = "0.2"
kernel32-sys = "0.2"
runas = "0.2"
