[package]
name = "dot"
version = "0.3.0"
authors = ["Greg Orzell", "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = "Alternative of dotfile management frameworks"
edition = "2021"

[dependencies]
anyhow = "1.0"
ansi_term = "0.12"
clap = { version = "4.3", features = ["derive", "wrap_help"] }
clap_complete = "4.3"
regex = "1.9"
shellexpand = "3"
thiserror = "1.0"
toml = "0.7"
url = "2.4"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
advapi32-sys = "0.2"
kernel32-sys = "0.2"
runas = "1.1"
